--- a/backend/public/css/index.css
+++ b/backend/public/css/index.css
@@ -4206,6 +4206,9 @@ details.collapse summary::-webkit-details-marker {
 .ml-4 {
   margin-left: 1rem;
 }
+.mr-4 {
+  margin-right: 1rem;
+}
 .line-clamp-1 {
   overflow: hidden;
   display: -webkit-box;
@@ -11676,6 +11679,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .ml-4 {
   margin-left: 1rem;
+}
+.mr-4 {
+  margin-right: 1rem;
 }
 .line-clamp-1 {
   overflow: hidden;
