--- a/backend/resources/tenant/src/App.css
+++ b/backend/resources/tenant/src/App.css
@@ -125,3 +125,11 @@ body::-webkit-scrollbar-track {
   background-repeat: no-repeat;
   background-size: contain;
 }
+
+.drawer-end .drawer-toggle ~ .drawer-side > *:not(.drawer-overlay) {
+  transform: translateX(135%);
+  -webkit-transform: translateX(135%);
+  -moz-transform: translateX(135%);
+  -ms-transform: translateX(135%);
+  -o-transform: translateX(135%);
+}
